# RankEvolve

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  benchmark_batch.py  commands.txt  compare_pyserini.py  comparison_report.md  comparison_results.json  eval_unified.py  evaluator.py  evaluator_beir.py  evaluator_bright.py  evaluator_bright_biology.py  evaluator_jmnian.py  evaluator_parallel.py  evaluator_parallel_wave.py  evaluator_parallel_wave_worker.py  evaluator_parallel_worker.py  evaluator_ql_parallel.py  evaluator_ql_parallel_worker.py  hyperparam_results.json  hyperparam_search.py  openevolve_config.yaml  openevolve_config_QL_freeform.yaml  openevolve_config_classic.yaml  openevolve_config_composable.yaml  openevolve_config_constrained.yaml  openevolve_config_constrained_fast.yaml  openevolve_config_explore.yaml  openevolve_config_freeform.yaml  openevolve_config_math.yaml  openevolve_config_parallel.yaml  optuna_search.py  pyproject.toml  resume_evolve.sh  resume_evolve_ql.sh  run_evaluation.sh  (+4 more)
bash_scripts/: baselines_late_interaction.sh  overnight_late_interaction_freeform.sh
benchmarks/: __init__.py  all_variants_results.json  bright_benchmark.py  cross_validation.py  cross_validation_results.json  full_bright_evaluation.py  gensim_reimplementation.py  gensim_root_cause.py  investigate_gensim_deep.py  investigate_gensim_performance.py  investigate_lazy_zero.py  query_side_bm25_comparison.py  run_all_variants.py  verify_gensim_formulas.py
docs/: architecture.md  discovered_features.md  freeform_evolution_analysis.md  late_interaction_evaluator_datasets.md  late_interaction_plan.md  late_interaction_recent_experiment_summary.md  results.md
evolved_programs/: bm25_constrained_step115.py  bm25_freeform_step177.py  bm25_freeform_step293.py  ql_freeform_step182.py
experiments/: 2025-12-07_best_program_info.json  2025-12-07_iter113_metrics.json
references/: bm25_formulas.md  evolved_variants.md
results/: bm25_composable_step185_full.json  bm25_constrained_step115_full.json  bm25_freeform_bugfixed_step293_full.json  bm25_freeform_fangfang_step197_full.json  bm25_freeform_step177_full.json  bm25_pyserini_12.json  evolved_freeform_best_12.json  freeform_hparam_search_v2.db  pyserini_baseline_12.json  ql_freeform_evolved_step182_full.json  seed_bm25_freeform_full.json  seed_bm25adpt_full.json  seed_bm25l_full.json  seed_bm25plus_full.json  seed_bm25t_full.json  seed_ql_JM_full.json  seed_ql_freeform_full.json
scripts/: compare_to_pyserini.py  eval_bright_gensim_lucene.py  idf_analysis_report.py  plot_evolution_metrics.py  print_latency_tables.py  print_results_tables.py  run_ql_baseline.sh  run_visualizer.sh  slurm_eval_best_and_seeds.sh  slurm_eval_one_wave.sh  slurm_full_evaluation.sh  slurm_rerun_failed_sequential.sh  slurm_resume_evolve.sh  slurm_single_eval.sh  verify_ql_seed.py
tests/: conftest.py  test_bm25.py  (+6 more)
(+1495 files in other folders)
