[project]
name = "ranking-evolved"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Fangchen Li", email = "fangchen.li@outlook.com" }
]
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.0.0",
    "numpy>=2.3.1",
    "openevolve==0.2.22",
    "matplotlib>=3.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.16.1",
    "pytest>=8.4.1",
    "ruff>=0.12.1",
]


[tool.pytest.ini_options]
testpaths = ["tests"]
