[project]
name = "ranking-evolved"
version = "0.1.0"
description = "BM25 ranking experiments with evolution via OpenEvolve"
readme = "README.md"
authors = [
    { name = "Fangchen Li", email = "fangchen.li@outlook.com" }
]
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.0.0",
    "numpy>=2.3.1",
    "scipy>=1.14.0",
    "openevolve @ git+https://github.com/algorithmicsuperintelligence/openevolve.git@main",
    "beir>=2.2.0",
    "pyserini>=1.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[dependency-groups]
dev = [
    "matplotlib>=3.10.8",
    "mypy>=1.16.1",
    "pytest>=8.4.1",
    "ruff>=0.12.1",
]

benchmark = [
    "pandas>=2.2.0",
    "gensim>=4.3.0",
    "pyserini>=0.25.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
